gccida/g1/doing_eh
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/doing_eh/src/except.c:843:7: error: use of undeclared identifier 'warned_11'
if ( !warned_11 && do_warn ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/doing_eh/src/except.c:846:1: error: use of undeclared identifier 'warned_11'
warned_11 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/doing_eh/src/obj/except.o] Error 1
